syntax = "proto3";
package seiprotocol.seichain.dex;

option go_package = "github.com/sei-protocol/sei-chain/x/dex/types";

message OrderEntry {
  
  uint64 price = 1; 
  uint64 quantity = 2; 
  repeated string allocationCreator = 3; 
  repeated uint64 allocation = 4; 
  string priceDenom = 5;
  string assetDenom = 6;
}
