syntax = "proto3";
package seiprotocol.seichain.dex;

import "gogoproto/gogo.proto";
import "dex/pair.proto";

option go_package = "github.com/sei-protocol/sei-chain/x/dex/types";

message Price {
  
  uint64 snapshotTimestampInSeconds = 1 [
    (gogoproto.jsontag) = "snapshot_timestamp_in_seconds"
  ];
  string price = 2 [
      (gogoproto.moretags)   = "yaml:\"price\"",
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
      (gogoproto.nullable)   = false,
      (gogoproto.jsontag) = "price"
  ];
  Pair pair = 3 [
    (gogoproto.jsontag) = "pair"
  ];
}
